1.14.134.alpha.1 - 26th October 2023
- Updates.

1.14.133 - 25th October 2023
- For 'Enhance minimap' ('Interface'), fixed an issue with the consolidated buffs frame layering.
- Added flight times.

1.14.131 - 11th October 2023
- Added flight times.

1.14.130 - 4th October 2023
- Fixed a potential issue with 'Automate quests' ('Automation') which may have occasionally shown a Lua error when accepting a quest.
- Added flight times.

1.14.129 - 27th September 2023
- For 'Enhance minimap', removed the 'Hide the world map button' option since it's no longer used.
- Updated flight data structure, replaced SoM references with Hardcore and reduced memory usage for 'Show flight times' ('Interface').
- Added flight times.

1.14.128 - 20th September 2023
- Added flight times.

1.14.127 - 14th September 2023
- Fixed an issue with 'Enhance minimap' ('Interface') which caused the area under the minimap to be unclickable if you have moved the minimap.
- Added flight times.

1.14.126 - 5th September 2023
- Added flight times.

1.14.125 - 31st August 2023
- Fixed an issue with 'Sell junk automatically' ('Automation') which caused the vendor summary to not be shown.

1.14.124 - 30th August 2023
- Added flight times.

1.14.123 - 23rd August 2023
- Fixed 'Use class colors in chat' ('Chat').

1.14.122 - 23rd August 2023
- Updated for game version 1.14.4.
- Added flight times.

1.14.120 - 8th August 2023
- Added flight times.

1.14.119 - 2nd August 2023
- Added flight times.

1.14.118 - 26th July 2023
- For 'Sell junk automatically' ('Automation'), increased the exclusion list limit to 2000 characters (was 600).
- Added flight times.

1.14.117 - 18th July 2023
- PTR (1.14.4): Fixed situational Lua error with 'Automate quests' ('Automation').
- Added flight times.

1.14.116 - 12th July 2023
- Fixed an issue with 'Block shared quests' ('Social') which caused a few quests to be incorrectly declined.